# url-shortener-rust

./: .env  Cargo.toml  Dockerfile  Makefile  docker-compose.prod.yaml  docker-compose.yaml
migrations/pg/: 20250714145021_url_index.sql  20250715110649_created.sql  20250715140149_new_migration.sql
src/: main.rs
src/app/: config.rs  handlers.rs  mod.rs  repositories.rs  services.rs
src/config/: dev.toml  prod.toml
src/domain/: url.rs
src/feature/url/: entity.rs  handler.rs  mod.rs  repository.rs  service.rs
src/migrations/: 20250608030712_test.sql
src/migrations/pg/: 20250714144648_url.sql  20250716143505_unique_url.sql  20250716143957_new_migration.sql
src/servers/http/: server.rs
src/utils/: db.rs  mod.rs  random.rs
