[package]
name = "url-shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
mimalloc = { version = "0.1.46" }
tower-http = { version = "0.6.6", features = ["cors"] }
axum = "0.8.4"
humantime = "2.1.0"
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-tokio-rustls",
  "chrono",
  "uuid",
] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1.88"
mockall = "0.13.1"
sea-query = { version = "0.32.6" }
serde_json = "1.0.140"
validator = { version = "0.20.0", features = ["derive"] }
rand = { version = "0.8.5" }
[target.'cfg(not(target_os = "windows"))'.dependencies]
jemallocator = { version = "0.5.4" }

[profile.release]
opt-level = 3
debug = 2
lto = "fat"
codegen-units = 1
strip = true

[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "target-feature=-crt-static"]